# pachyderm-demo-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: configuration.yaml
config/dataset/: bin_cls.yaml
src/: config.py  prepare_data.py
