[tool.poetry]
name = "pachyderm-demo-project"
version = "0.1.0"
description = ""
authors = ["User <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
pydantic = "^2.8.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
